[metadata]
name = hvppyicon
version = 0.0.1
description = Hvppyicon is an alphabet icon generator for Notion.
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    Pillow==9.4.0
include_package_data = True
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hvppyicon = hvppyicon.app:main
