[metadata]
name = hvppyicon
version = 0.0.2
description = Hvppyicon is an alphabet icon generator for Notion.
author = hvppycoding
author_email = hvppycoding@gmail.com

[options]
packages = find:
package_dir =
    =src
install_requires = 
    pillow==11.3.0
include_package_data = True
    
[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    hvppyicon = hvppyicon.app:main
